@@ -69,6 +69,7 @@ with ones that work the same as format strings used in scripts. In most cases,
 a placeholder like %@ or %d has been replaced with one like [destination] or
 [population].
 * @-credits -> credits-format
+* oxp-containing-messages-list-@ -> oxp-containing-messages-list
 * witch-to-@-in-f-seconds -> witch-to-x-in-y-seconds
 * witch-galactic-in-f-seconds -> witch-galactic-in-x-seconds
 * station-docking-clearance-abort-cancelled-in-f -> station-docking-clearance-abort-cancelled-in-time
